# GridapEmbedded.jl

./: .gitignore  .travis.yml  BulkGhostPenaltyAssembleMaps.jl  GridapEmbeddedFixes.jl  LICENSE.md  Manifest.toml  NEWS.md  Project.toml  README.md  TEST0-cutsquare-nint3.jl  TEST0-cutsquare.jl  TEST0.jl  TEST1-cutsquare-nint3.jl  aggregates_bounding_boxes_tools.jl  bulk_ghost_penalty_canvas.jl  bulk_ghost_penalty_canvas_div.jl  bulk_ghost_penalty_canvas_div_on_cut_cells _exploration_full-terms.jl  bulk_ghost_penalty_canvas_div_on_cut_cells.jl  bulk_ghost_penalty_canvas_selecting_cut_cells.jl  bulk_ghost_penalty_canvas_towardsdiv.jl  bulk_ghost_penalty_canvas_u-only.jl  bulk_ghost_penalty_stab_tools.jl  cg_dg_heat.jl  linearized_agfem.jl  linearized_cutfem.jl  test_proj_rhs_func.jl  versions.js
.github/workflows/: ci.yml  ci_x86.yml
cmake_c_template/: CMakeLists.txt
cmake_c_template/CMake/: qhullwrapperConfig.cmake.in
cmake_c_template/CMake/Modules/: FindQHULL.cmake
cmake_c_template/src/examples/: CMakeLists.txt
cmake_c_template/src/lib/: CMakeLists.txt  qhullwrapper.c
cmake_c_template/src/tests/: CMakeLists.txt
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/AggregatedFEM/: index.html
dev/CSG/: index.html
dev/Distributed/: index.html
dev/GeometricalDerivatives/: index.html
dev/Interfaces/: index.html
dev/LevelSetCutters/: index.html
dev/MomentFittedQuadratures/: index.html
dev/search/: index.html
docs/: Project.toml  make.jl
docs/src/: AggregatedFEM.md  CSG.md  CSGCutters.md  Distributed.md  GeometricalDerivatives.md  Interfaces.md  LevelSetCutters.md  MomentFittedQuadratures.md  index.md
examples/: poisson_csg_cutfem.jl  runexamples.jl  stokes_tube_with_obstacle_cutfem.jl
examples/BimaterialLinElastCutFEM/: BimaterialLinElastCutFEM.jl
examples/PoissonCSGCutFEM/: PoissonCSGCutFEM.jl
examples/StokesTubeWithObstacleCutFEM/: StokesTubeWithObstacleCutFEM.jl
src/: EmbeddedDiscretizations.jl  Exports.jl  Geometries.jl  GridapEmbedded.jl  LevelSetCutters.jl  LookupTables.jl  SubTriangulations.jl  Triangulations.jl  bindings.jl  load.jl
src/AgFEM/: AgFEM.jl  AgFEMSpaces.jl  AggregateBoundingBoxes.jl  CellAggregation.jl  CellAggregation_space.jl
src/AlgoimUtils/: AlgoimUtils.jl
src/BGP/: BGP.jl  BulkGhostPenaltyAssembleMaps.jl  aggregates_bounding_boxes_tools.jl  bulk_ghost_penalty_stab_tools.jl  darcy_preconditioning_tools.jl  fields_and_blocks_tools.jl
src/CSG/: CSG.jl  Geometries.jl  Nodes.jl
src/Distributed/: Distributed.jl  DistributedAgFEM.jl  DistributedAgFEM_OLD.jl  DistributedDiscreteGeometries.jl  DistributedDiscretizations.jl  DistributedQuadratures.jl  DistributedSubFacetTriangulations.jl  GeometricalDerivatives.jl
src/Interfaces/: CutFaceBoundaryTriangulations.jl  Cutters.jl  EmbeddedDiscretizations.jl  EmbeddedFacetDiscretizations.jl  FacetSubTriangulations.jl  Interfaces.jl  SubCellTriangulations.jl  SubFacetTriangulations.jl  SubTriangulations.jl
src/LevelSetCutters/: AnalyticalGeometries.jl  CutTriangulations.jl  DifferentiableTriangulations.jl  DiscreteGeometries.jl  Geometries.jl  LevelSetCutters.jl  LookupTables.jl  SubTriangulations.jl
src/MomentFittedQuadratures/: MomentFittedQuadratures.jl
src/MomentFitting/: CutCellMoments.jl  JacobiPolynomialBases.jl  MomentFitting.jl
test/: CuttersTests.jl  EmbeddedDiscretizationsTests.jl  GeometriesTests.jl  LevelSetCuttersTests.jl  LookupTablesTests.jl  SubTriangulationsTests.jl  TriangulationsTests.jl  _DistributedTests.jl  bimaterial_steel.vtu  runtests.jl  subfacets.vtu
test/AgFEMTests/: AgFEMSpacesTests.jl  CellAggregationSpaceFilterTest.jl  CellAggregationSpaceTests.jl  CellAggregationTests.jl  PeriodicAgFEMSpacesTests.jl  runtests.jl
test/AlgoimUtilsTests/: AlgoimInterfaceTests.jl  ClosestPointTests.jl  DualQuadraturesTests.jl  PoissonAlgoimTests.jl  QuadratureDegreeTests.jl  VisualizationTests.jl  VolumeConservationTests.jl  runtests.jl
test/CSGTests/: GeometriesTests.jl  NodesTests.jl  runtests.jl
test/DistributedTests/: AggregatesTests.jl  AggregationTests.jl  DistributedDevs.jl  DistributedDiscreteGeometryPoissonTest.jl  DistributedLSDiscreteGeometryPoissonTest.jl  GeometricalDifferentiationTests.jl  Issue111Tests.jl  PeriodicDistributedDiscreteGeometryPoissonTest.jl  PeriodicDistributedLSDiscreteGeometryPoissonTest.jl  PeriodicPoissonTests.jl  PoissonTests.jl  StokesTests.jl  runtests.jl  testing_remote_aggs.jl  testing_remote_no_aggs.jl
test/GridapEmbeddedTests/: BimaterialPoissonCutFEMTests.jl  EmbeddedBimaterialPoissonCutFEMTests.jl  HeatEqn_CG-DG.jl  HeatEqn_CG-DG_quad.jl  PeriodicDiscreteGeoPoissonAgFEMTests.jl  PeriodicPoissonAgFEMTests.jl  PoissonAgFEMTests.jl  PoissonAgFEM_CG-CG.jl  PoissonCutFEMTests.jl  PoissonModalC0AgFEMTests.jl  StokesAgFEMTests.jl  StokesCutFEMTests.jl  TraceFEMTests.jl  runtests.jl
test/InterfacesTests/: EmbeddedDiscretizationsTests.jl  EmbeddedFacetDiscretizationsTests.jl  FacetSubTriangulationsTests.jl  ShapeDerivativeTests.jl  SubCellTriangulationsTests.jl  SubFacetTriangulationsTests.jl  SubTriangulationsTests.jl  runtests.jl
test/dev/: constraint_merging.jl  (+10 more)
v0.6.0/: index.html
v0.6.1/: index.html
v0.7.0/: index.html
v0.8.0/: index.html
v0.8.1/: index.html
v0.8.2/: index.html
v0.8.3/: .documenter-siteinfo.json  index.html
v0.9.0/: .documenter-siteinfo.json  index.html
v0.9.1/: .documenter-siteinfo.json  index.html  objects.inv
v0.9.10/: .documenter-siteinfo.json  index.html  objects.inv
v0.9.11/: .documenter-siteinfo.json  index.html  objects.inv
v0.9.2/: .documenter-siteinfo.json  index.html  objects.inv
v0.9.3/: .documenter-siteinfo.json  index.html  objects.inv
v0.9.4/: .documenter-siteinfo.json  index.html  objects.inv
v0.9.5/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
v0.9.6/: .documenter-siteinfo.json  index.html
v0.9.7/: .documenter-siteinfo.json  index.html  objects.inv
v0.9.8/: .documenter-siteinfo.json  index.html  search_index.js
v0.9.9/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
(+85 files in other folders)
