#################################################################
# EXAMPLES
#################################################################

FILE(GLOB EXAMPLES_SRC *.c)
SET(EXAMPLES_SRC ${EXAMPLES_SRC} PARENT_SCOPE)

FOREACH(EXAMPLE_SRC ${EXAMPLES_SRC})
    GET_FILENAME_COMPONENT(EXE_NAME ${EXAMPLE_SRC} NAME_WE)
    ADD_EXECUTABLE(${EXE_NAME} ${EXAMPLE_SRC})
    TARGET_LINK_LIBRARIES(${EXE_NAME} ${LIB})

    ADD_TEST(${EXE_NAME}_TEST ${EXECUTABLE_OUTPUT_PATH}/${EXE_NAME})
ENDFOREACH()

ADD_SUBDIRECTORY(${EXTEND_WRAPPERS_EXAMPLE_PATH})
